***
*** Version 1.4.7 ***
***

Kim Woelders (3):
      Update autofoo (run autoupdate).
      Don't install .a files.
      Generate a ChangeLog using git shortlog between existing tags.


***
*** Version 1.4.6 ***
***

Cedric BAIL (2):
      autotools: move to AC_CONFIG_HEADERS.
      trunk: remove use of AM_PROG_CC_STDC as AC_PROG_CC does it.

Kim Woelders (3):
      Change INCLUDES to AM_CPPFLAGS.
      Edb is dead.
      1.4.6.


***
*** Version 1.4.5 ***
***

Carsten Haitzler (1):
      no more debian dir in our svn - debian now handles this tehmselves.

Kim Woelders (1):
      1.4.5 (no significant changes since 1.4.4).

Lucas De Marchi (1):
      Convert (hopefully) all comparisons to NULL


***
*** Version 1.4.4 ***
***

Kim Woelders (1):
      1.4.4 (no change since 1.4.3).


***
*** Version 1.4.3 ***
***

Carsten Haitzler (1):
      fix the copying license to

Daniel Kolesa (11):
      Removed debian things like rasterman did in some others from Makefile.am and configure.ac/in(and modifed AUTHORS, autogen.sh and README in E-MODULES-EXTRA) in
      Removed debian subfolders - prepared for a new set of debian subdirs.
      Added new set of debian subdirs.
      prepare debian rules files for new chmod permissions.
      Added debian/rules files with a new permissions set(755).
      Updated debian stuff everywhere.
      forgot to add --prefix=/usr
      i found it is useless and cdbs is setting up prefix automatically.
      Updated debian stuff(grew Standards-Version, updated python-ecore rules file)
      Updated Standards-Version
      Fixed debian stuff everywhere.

Kim Woelders (4):
      Set AUTOMAKE_OPTIONS = foreign.
      Remove .cvsignores.
      Add .gitignore.
      1.4.3.


***
*** Version 1.4.2 ***
***

Carsten Haitzler (1):
      asparagus!

Michael Jennings (1):
      Tue Oct 21 21:27:44 2008                        Michael Jennings (mej)

Peter Wehrfritz (1):
      configure.in -> configure.ac


***
*** Version 1.4.1 ***
***
