@@ -1,3 +1,4 @@
+Lluixhi Scura (Aric Belsito) <lluixhi@gmail.com>
 
 XCF loader: Christian Kreibich <cK@whoop.org>, based on
             code from the Gimp (www.gimp.org).
