@@ -10,8 +10,9 @@ Packager: %{?_packager:%{_packager}}%{!?_packager:Michael Jennings <mej@eterm.or
 Vendor: %{?_vendorinfo:%{_vendorinfo}}%{!?_vendorinfo:The Enlightenment Project (http://www.enlightenment.org/)}
 Distribution: %{?_distribution:%{_distribution}}%{!?_distribution:%{_vendor}}
 #BuildSuggests: xorg-x11-devel freetype-devel freetype2-devel xproto
-BuildRequires: /usr/bin/freetype-config /usr/include/X11/X.h libjpeg-devel
-BuildRequires: imlib2-devel
+BuildRequires: /usr/bin/freetype-config /usr/include/X11/X.h
+BuildRequires: imlib2-devel libjpeg-devel libpng-devel zlib-devel libtiff-devel
+BuildRequires: libid3tag-devel /usr/include/gif_lib.h
 BuildRoot: %{_tmppath}/%{name}-%{version}-root
 
 %description
